[package]
name = "auth-helper"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Authorization tools"
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "iota", "auth" ]
homepage = "https://www.iota.org"

[dependencies]
jsonwebtoken = { version = "8.1.0", default-features = false }
rand = { version = "0.8.4", default-features = false, features = [ "std" ] }
rust-argon2 = { version = "1.0.0", default-features = false }
serde = { version = "1.0.30", default-features = false, features = [ "std", "derive" ] }
thiserror = { version = "1.0.30", default-features = false }
