[package]
name = "fern-logger"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Convenient and configurable multi-output logger"
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "iota", "logger", "log" ]
homepage = "https://www.iota.org"

[dependencies]
time-util = { version = "0.1.0", path = "../time-util", default-features = false }

fern = { version = "0.6.0", default-features = false, features = [ "colored" ] }
log = { version = "0.4.14", default-features = false, features = [ "serde" ] }
serde = { version = "1.0.130", default-features = false, features = [ "std", "derive" ] }
thiserror = { version = "1.0.30", default-features = false }
