[package]
name = "packable"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Serialization and deserialization primitives for the bee framework."
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "iota", "serialization", "framework", "packable" ]
homepage = "https://www.iota.org"

[features]
io = [ ]

[build-dependencies]
autocfg = { version = "1.0.1", default-features = false }

[dependencies]
packable-derive = { path = "../packable-derive", default-features = false }

primitive-types = { version = "0.10.1", default-features = false, optional = true }
serde = { version = "1.0.130", default-features = false, features = [ "derive", "std" ], optional = true }
