[package]
name = "prefix-hex"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Encoding and decoding of hex strings with 0x prefix."
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "iota", "hex", "prefix", "encoding", "decoding"]
homepage = "https://www.iota.org"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
primitive-types = { version = "0.10.1", default-features = false, optional = true }
uint = { version = "0.9.3", default-features = false, optional = true }

[dev-dependencies]
paste = { version = "1.0.6", default-features = false }

[features]
primitive-types1 = [ "primitive-types", "uint" ]
