[package]
name = "prefix-hex"
version = "0.7.1"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Encoding and decoding of hex strings with a 0x prefix."
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "iota", "hex", "prefix", "encoding", "decoding"]
homepage = "https://www.iota.org"
rust-version = "1.60"

[dependencies]
hex = { version = "0.4", default-features = false, features = [ "alloc" ] }
primitive-types = { version = "0.12", default-features = false, optional = true }
uint = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
paste = { version = "1.0", default-features = false }

[features]
primitive-types = [
    "dep:primitive-types",
    "dep:uint",
]
std = [ ]
