[package]
name = "time-helper"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Common timestamp functionality"
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "iota", "time" ]
homepage = "https://www.iota.org"

[dependencies]
time = { version = "0.3.0", default-features = false, features = [ "formatting", "local-offset" ] }
