[package]
name = "packable-derive"
version = "0.7.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Derive macro for the `packable` crate."
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "binary", "no_std", "serialization", "packable" ]
homepage = "https://www.iota.org"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { version = "1.2.1", default-features = false }
proc-macro-error = { version = "1.0.4", default-features = false, features = [ "syn-error" ] }
proc-macro2 = { version = "1.0.46", default-features = false }
quote = { version = "1.0.21", default-features = false }
syn = { version = "1.0.102", default-features = false, features = [ "full", "extra-traits", "parsing", "printing", "derive", "proc-macro", "clone-impls" ] }
