[package]
name = "packable-derive"
version = "0.9.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "Derive macro for the `packable` crate."
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = ["binary", "no_std", "serialization", "packable"]
homepage = "https://www.iota.org"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { version = "2.0.0", default-features = false }
proc-macro2 = { version = "1.0.69", default-features = false }
quote = { version = "1.0.33", default-features = false }
syn = { version = "2.0.39", default-features = false, features = [
    "full",
    "extra-traits",
    "parsing",
    "printing",
    "derive",
    "proc-macro",
    "clone-impls",
] }
