[package]
name = "packable"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "A crate for packing and unpacking binary representations."
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "binary", "no_std", "serialization", "packable" ]
homepage = "https://www.iota.org"

[features]
io = [ "std" ]
std = [ ]
usize = [ ]

[build-dependencies]
autocfg = { version = "1.0.1", default-features = false }

[dependencies]
packable-derive = { version = "=0.3.0", path = "../packable-derive", default-features = false }

primitive-types = { version = "0.10.1", default-features = false, optional = true }
serde = { version = "1.0.130", default-features = false, features = [ "derive", "std" ], optional = true }
