[package]
name = "packable"
version = "0.11.0"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "A crate for packing and unpacking binary representations."
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = ["binary", "no_std", "serialization", "packable"]
homepage = "https://www.iota.org"

[features]
io = ["std"]
serde = ["dep:serde", "hashbrown/serde"]
std = ["serde?/std", "primitive-types?/std"]
usize = []

[build-dependencies]
autocfg = { version = "1.1.0", default-features = false }

[dependencies]
packable-derive = { version = "=0.10.0", path = "../packable-derive", default-features = false }

hashbrown = { version = "0.14.3", default-features = false, features = [
    "ahash",
    "inline-more",
] }
primitive-types = { version = "0.12.2", default-features = false, optional = true }
serde = { version = "1.0.195", default-features = false, features = [
    "derive",
    "alloc"
], optional = true }
