[package]
name = "trace-tools"
version = "0.3.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Tracing and diagnostic tools for tasks"
readme = "README.md"
repository = "https://github.com/iotaledger/common-rs"
license = "Apache-2.0"
keywords = [ "iota", "tangle", "task", "trace" ]
homepage = "https://www.iota.org"

[dependencies]
fern-logger = { version = "0.5.0", path = "../../fern-logger", default-features = false }
time-helper = { version = "0.1.0", path = "../../time-helper", default-features = false }
trace-tools-attributes = { version = "0.1.0", path = "../trace-tools-attributes", default-features = false }

colored = { version = "2.0.0", default-features = false }
console-subscriber = { version = "0.1.0", default-features = false, features = [ "parking_lot" ], optional = true }
inferno = { version = "0.10.6", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
log = { version = "0.4.14", default-features = false }
parking_lot = { version = "0.11.1", default-features = false }
tokio = { version = "1.13.0", default-features = false, features = [ "full", "rt", "tracing" ], optional = true }
tracing = { version = "0.1.26", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = [ "futures-01", "futures-03", "std", "std-future" ] }
tracing-log = { version = "0.1.2", default-features = false, features = [ "log-tracer", "std" ] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = [ "ansi", "fmt", "parking_lot", "registry" ] }

[dev-dependencies]
tokio = { version = "1.13.0", default-features = false, features = [ "full", "rt", "tracing" ] }

[features]
default = [ ]
tokio-console = [ "console-subscriber", "tokio" ]

[[example]]
name = "console"
required-features = [ "tokio-console" ]
